Fix broken text overflows for queues in overview screen

--- a/styles/theme/gow/formate.css
+++ b/styles/theme/gow/formate.css
@@ -16142,7 +16142,7 @@ z-index: 99;}
     bottom: 4px;
     left: 0;
     right: 0;
-text-align: center;
+	text-align: center;
     font-size: 13px;
 	overflow: hidden;}
 .overvieew5:hover{color:#97a6bf}
@@ -16154,9 +16154,9 @@ text-align: center;
 
 .overvieew7{height: auto;
     position: relative;
-float: left;}
+	float: left;}
 .overvieew8{
-margin: 7px;
+	margin: 7px;
     border: 1px solid #091d2e;
     box-shadow: 0 4px 3px 0 rgba(0, 0, 0, 0.5) !important;
     -webkit-box-shadow: 0 4px 3px 0 rgba(0, 0, 0, 0.5) !important;
@@ -16172,13 +16172,14 @@ margin: 7px;
 }
 
 .overvieew9{
+	display: inline-block;
     color: #8f8f8f;
-    line-height: 16px;
+    line-height: 20px;
     margin-left: 3px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    width: 165px;
+    width: 80%;
     float: left;
     font-size: 11px;
     }
